led module updated

--- a/configs/ledboard.yml
+++ b/configs/ledboard.yml
@@ -4,3 +4,9 @@ bytesize: serial.EIGHTBITS
 parity: serial.PARITY_NONE
 stopbits: serial.STOPBITS_ONE
 timeout: 0
+animation_number: 1,
+animation_speed: 14,
+intensity: 99,
+trigger_delay: 10,
+led_delay: 5,
+timeout:float: 0.05
