--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Replace with the version of Python you're using
+        python-version: '3.6.9'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with the command to install your dependencies
+        pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m unittest ledunittest.py  # Replace with the command to run your tests
+      run: python -m unittest led/ledunittest.py  # Replace with the command to run your tests
