--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      working-directory: led/ledunittest.py
+      working-directory: led
       run: python -m unittest led/ledunittest.py  # Replace with the command to run your tests
